# catla

./: .gitignore  Cargo.toml  README.md  build.rs  rustc-ice-2024-05-18T17_55_52-11332.txt
catla_grammar/: Cargo.toml
catla_grammar/src/: lib.rs
catla_old/.catla/catla_std/: Cargo.toml
catla_old/.catla/catla_std/src/: operator.rs
catla_old/.catla/test/: Cargo.toml
catla_old/catla_parser/src/: parser.rs
catla_old/catla_parser/src/parser/: statement.rs
catla_old/catla_transpile_std/src/: drop.rs  holder.rs  lib.rs  rust_codegen.rs
catla_old/catla_transpile_std/src/rust_codegen/: string.rs
catla_old/src/transpiler/: codegen.rs  future.rs  name_resolver.rs
catla_old/src/transpiler/codegen/: cargo.rs  custom.rs
catla_old/src/transpiler/optimizer/: function_equals.rs  variable_users.rs
catla_old/src/transpiler/parse_error/: statement.rs
catla_old/src/transpiler/semantics/: syntax_validation.rs  types.rs
catla_old/std/src/: console.catla  string.catla
catla_old/std/src/compare/: equal.catla
catla_old/std/src/operator/: sub.catla
catla_old/test/src/: main.catla  test.catla
catla_old_unused/.catla/catla_std/src/: compare.rs  console.rs  main.rs  string.rs
catla_old_unused/.catla/test/src/: test.rs
catla_old_unused/catla_parser/src/: grammar.rs  lexer.rs  lib.rs
catla_old_unused/catla_parser/src/parser/: types.rs
catla_old_unused/localize/: ja_JP.toml
catla_old_unused/src/: main.rs  transpiler.rs
catla_old_unused/src/localize/: localizer.rs
catla_old_unused/src/transpiler/: advice.rs  component.rs  error.rs  optimizer.rs  parse_error.rs  resource.rs  semantics.rs
catla_old_unused/src/transpiler/codegen/: program.rs
catla_old_unused/src/transpiler/optimizer/: debug.rs  function_recursive.rs
catla_old_unused/src/transpiler/parse_error/: misc.rs
catla_old_unused/std/src/operator/: add.catla  div.catla  mul.catla
catla_parser/: Cargo.toml
catla_parser/src/: ast.rs  error.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  util.rs
catla_parser/src/parser/: expression.rs  literal.rs  statement.rs  types.rs
catla_transpile_std/: Cargo.toml
catla_transpile_std/src/: drop.rs  holder.rs  lib.rs  memory.rs
catla_transpile_std/src/rust_codegen/: print.rs  string.rs
docs/: README.md  handoff.md  lifetime-analysis.md
localize/: ja_JP.toml
src/: heap.rs  llvm.rs  localize.rs  main.rs  module.rs  transpiler.rs  util.rs  vm.rs  wrapper.cpp
src/catla_codegen/: Cargo.toml
src/catla_codegen/src/: catla_std.rs  codegen.rs  crates.rs  lib.rs  transpiler.rs
src/catla_codegen/src/catla_std/: drop.rs  object.rs  string.rs
src/catla_compiler/: Cargo.toml
src/catla_compiler/src/: compiler.rs  lib.rs  resource.rs  settings.rs
src/catla_crate/: Cargo.toml
src/catla_crate/src/: lib.rs
src/catla_grammar/src/: lib.rs
src/catla_import/: Cargo.toml
src/catla_import/src/: element.rs  error.rs  import.rs  lib.rs  resource.rs
src/catla_name_resolver/: Cargo.toml
src/catla_name_resolver/src/: lib.rs  resolve.rs
src/catla_optimization/: Cargo.toml
src/catla_optimization/src/: lifetime.rs
src/catla_parser/: Cargo.toml
src/catla_parser/src/: ast.rs  error.rs  lexer.rs  lib.rs
src/catla_parser/src/parser/: expression.rs  statement.rs  types.rs
src/catla_print_debug/: Cargo.toml
src/catla_print_debug/src/: lib.rs  optimization.rs  type_infer.rs
src/catla_semantics/: Cargo.toml
src/catla_std/: Cargo.toml
src/catla_std/src/: borrow.rs  dispose.rs  drop.rs  io.rs  lib.rs  object.rs  string.rs
src/catla_type/: Cargo.toml
src/catla_type/src/: error.rs  lib.rs  module_element_collector.rs  type_infer.rs  types.rs  user_type_collector.rs
src/catla_type/src/type_infer/: user_type_collector.rs
src/catla_util/: Cargo.toml
src/catla_util/src/: future.rs  lib.rs  module_path.rs  source_code.rs
src/cxx/: wrapper.rs
src/heap/: allocator.rs  gc.rs
src/llvm/: compiler.rs  jit.rs
src/llvm/jit/: jit_compiler.rs
src/localize/: localizer.rs
src/module/: object_type.rs
src/transpiler/: advice.rs  codegen.rs  component.rs  context.rs  error.rs  future.rs  name_resolver.rs  optimizer.rs  parse_error.rs  resource.rs  semantics.rs  syntax_validation.rs
src/transpiler/codegen/: cargo.rs  program.rs  program.rs~
src/transpiler/optimizer/: debug.rs  function_equals.rs  function_recursive.rs  lifetime_analyzer.rs  move_optimization.rs
src/transpiler/optimizer/function_recursive/: debug.rs  function_call_collector.rs
src/transpiler/optimizer/lifetime_analyzer/: debug.rs  lifetime_collector.rs
src/transpiler/optimizer/move_optimization/: debug.rs  variable_user_collector.rs
src/transpiler/parse_error/: misc.rs  statement.rs
src/transpiler/semantics/: syntax_validation.rs  type_info.rs  types.rs
src/transpiler/semantics/component_builder/: component.rs
src/transpiler/semantics/types/: type_info.rs  (+4 more)
src/util/: concurrent.rs
src/vm/: module.rs  tortie.rs
src/vm/module/: const_value.rs  function.rs  object_type.rs  order.rs  parser.rs  vm_module.rs
src/vm/runtime/: error.rs
std/src/: dispose.catla  io.catla  numeric.catla  string.catla
std/src/compare/: order.catla
std/src/operators/: add.catla  div.catla  mul.catla  sub.catla
test/: main.catla  test.catla
test/src/: main.catla  test.catla
(+25 files in other folders)
