# !tyml @cargo/Cargo
[workspace]
resolver = "2"
members = [
    "src/catla_compiler",
    "src/catla_grammar",
    "src/catla_import",
    "src/catla_name_resolver",
    "src/catla_parser",
    "src/catla_print_debug",
    "src/catla_semantics",
    "src/catla_codegen",
    "src/catla_type",
    "src/catla_util",
    "src/catla_crate"
, "src/catla_std"]
exclude = [ ".catla" ]
