# !tyml @cargo/Cargo
[package]
name = "catla_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
catla_parser = { path = "../catla_parser", version = "0.1.0" }
catla_util = { path = "../catla_util", version = "0.1.0" }
catla_crate = { path = "../catla_crate", version = "0.1.0" }
catla_std = { path = "../catla_std", version = "0.1.0" }
tokio = { version = "1.48.0", features = [ "full" ] }
