# !tyml @cargo/Cargo
[package]
name = "catla_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
catla_import = { path = "../catla_import", version = "0.1.0" }
catla_name_resolver = { path = "../catla_name_resolver", version = "0.1.0" }
catla_parser = { path = "../catla_parser", version = "0.1.0" }
catla_semantics = { path = "../catla_semantics", version = "0.1.0" }
catla_optimization = { path = "../catla_optimization", version = "0.1.0" }
catla_type = { path = "../catla_type", version = "0.1.0" }
catla_util = { path = "../catla_util", version = "0.1.0" }
catla_print_debug = { path = "../catla_print_debug", version = "0.1.0" }
catla_codegen = { path = "../catla_codegen", version = "0.1.0" }
catla_crate = { path = "../catla_crate", version = "0.1.0" }
tokio = { version = "1.48.0", features = [ "full" ] }
hashbrown = "0.16.0"
semver = "1.0"
futures = "0.3"
